// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sequence with the @cubejs-backend/bigquery-driver for the Customers.RollingExternal 1`] = `
Array [
  Array [
    "downloadQueryResults",
    "stream",
    "queryColumnTypes",
  ],
  Array [
    "createSchemaIfNotExists",
    "uploadTableWithIndexes",
  ],
]
`;

exports[`Sequence with the @cubejs-backend/bigquery-driver for the Customers.RollingInternal 1`] = `
Array [
  Array [
    "loadPreAggregationIntoTable",
  ],
  Array [],
]
`;

exports[`Sequence with the @cubejs-backend/bigquery-driver for the ECommerce.SimpleAnalysisExternal 1`] = `
Array [
  Array [
    "downloadQueryResults",
    "stream",
    "queryColumnTypes",
  ],
  Array [
    "uploadTableWithIndexes",
  ],
]
`;

exports[`Sequence with the @cubejs-backend/bigquery-driver for the ECommerce.SimpleAnalysisInternal 1`] = `
Array [
  Array [
    "loadPreAggregationIntoTable",
  ],
  Array [],
]
`;
